Prevent comment form textarea scrollbar from showing

--- a/src/components/CommentForm/CommentForm.scss
+++ b/src/components/CommentForm/CommentForm.scss
@@ -9,10 +9,11 @@
 
     display: block;
     width: 100%;
-    height: 89px;
+    height: 90px;
     padding: 10px;
     padding-bottom: 50px;
     resize: none;
+    overflow: hidden;
   }
 
   &__controls {
